# interpreter

./: .gitignore  CMakeLists.txt  CMakePresets.json  DOCS.md  LICENSE  README.md
doc/html/: class_context.html  class_lexical_syntax_error-members.html  class_lexical_syntax_error.html  class_lexical_syntax_error__coll__graph.map  class_lexical_syntax_error__inherit__graph.md5  class_statement.html  class_tokenizer-members.html  classes.html  context_8h_source.html  dir_33a580c921517a872106bdcf8da8f812.html  dir_39d5bf9b111454cc72a3218e52b40021.html  dir_6374bb62f56888046a2666908ed60f68.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_72ed43c64f9e9a1bf8f49895b814dd03.html  dir_7e8f2d225ee232812227b6cad641293d.html  dir_b280378005982635dceac4caa563a9f9.html  dir_bd433701faaccebeaa237499c5fb23a8.html  dir_c099332b87824e05b3f460fd17b8690b.html  files.html  hierarchy.html  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherits.html  md__r_e_a_d_m_e.html  pages.html  statement_8h_source.html  token_8h_source.html
docs/: _abstract_expression_8h.html  _abstract_expression_8h.js  _abstract_expression_8h__dep__incl.map  _abstract_expression_8h__dep__incl.md5  _abstract_expression_8h__incl.map  _abstract_expression_8h__incl.md5  _abstract_expression_8h_source.html  _abstract_statement_8h.html  _abstract_statement_8h.js  _abstract_statement_8h__dep__incl.map  _abstract_statement_8h__dep__incl.md5  _abstract_statement_8h__incl.map  _abstract_statement_8h__incl.md5  _abstract_statement_8h_source.html  _abstract_tokenizer_8h.html  _abstract_tokenizer_8h.js  _abstract_tokenizer_8h__dep__incl.map  _abstract_tokenizer_8h__dep__incl.md5  _abstract_tokenizer_8h__incl.map  _abstract_tokenizer_8h__incl.md5  _abstract_tokenizer_8h_source.html  _addition_expression_8h.html  _addition_expression_8h.js  _addition_expression_8h__incl.map  _addition_expression_8h__incl.md5  _addition_expression_8h_source.html  _and_expression_8h.html  _and_expression_8h__incl.map  _and_expression_8h__incl.md5  _and_expression_8h_source.html  _assignment_statement_8h_source.html  _client_8h.html  _client_8h.js  _client_8h__incl.map  _client_8h__incl.md5  _client_8h_source.html  _context_8h.html  _context_8h.js  _context_8h__dep__incl.map  _context_8h__dep__incl.md5  (+817 more)
docs/html/: class_expression.html  class_parser.html  class_token-members.html  class_token.html  class_tokenizer.html  dir_1b3c1c6beec63dd3441d22dd6a9c1bfd.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  expression_8h_source.html  functions.html  (+4 more)
doxygen/: DOCUMENTATION.md  ebnf.doc  ebnf.md  grammar-ebnf.md  index.md
examples/: comparison.lsp  identifier.lsp  identifier.txt  operator.lsp  operator.txt  operators.txt  print.txt  test.lsp
latex/: _addition_expression_8h_source.tex  _and_expression_8h_source.tex  _context_8h_source.tex  _division_expression_8h_source.tex  _documentation.tex  _e_b_n_f.tex  _equal_to_expression_8h_source.tex  _expression_8h_source.tex  _greater_than_expression_8h_source.tex  _greater_than_or_equal_to_expression_8h_source.tex  _identifier_8h_source.tex  _less_than_expression_8h_source.tex  _less_than_or_equal_to_expression_8h_source.tex  _modulo_expression_8h_source.tex  _multiplication_expression_8h_source.tex  _negation_expression_8h_source.tex  _non_terminal_expression_8h_source.tex  _not_equal_to_expression_8h_source.tex  _number_8h_source.tex  _or_expression_8h_source.tex  _page.tex  _parser_8h_source.tex  _print_statement_8h_source.tex  _statement_8h_source.tex  _subtraction_expression_8h_source.tex  _terminal_expression_8h_source.tex  _three_way_expression_8h_source.tex  _token_8h_source.tex  _tokenizer_8h_source.tex  _variable_statement_8h_source.tex  annotated.tex  class_addition_expression.tex  class_addition_expression__coll__graph.md5  class_and_expression.tex  class_and_expression__inherit__graph.md5  class_context.tex  class_division_expression.tex  class_division_expression__coll__graph.md5  class_equal_to_expression.tex  class_equal_to_expression__coll__graph.md5  (+52 more)
lib/: CMakeLists.txt
lib/expression/: CMakeLists.txt
lib/expression/include/: AdditionExpression.h  DivisionExpression.h  Identifier.h  ModuloExpression.h  MultiplicationExpression.h  NonTerminalExpression.h  Number.h  SubtractionExpression.h  TerminalExpression.h  expression.h
lib/expression/include/Operator/: DivisionExpression.h  ModuloExpression.h
lib/expression/include/Operator/Comparison/: EqualToExpression.h  GreaterThanExpression.h  GreaterThanOrEqualToExpression.h  LessThanExpression.h  LessThanOrEqualToExpression.h  NotEqualToExpression.h  ThreeWayExpression.h
lib/expression/include/Operator/Logical/: AndExpression.h  NegationExpression.h  OrExpression.h
lib/expression/include/Terminal/: Identifier.h  Number.h
lib/expression/src/: AdditionExpression.cpp  DivisionExpression.cpp  Identifier.cpp  ModuloExpression.cpp  MultiplicationExpression.cpp  NonTerminalExpression.cpp  Number.cpp  SubtractionExpression.cpp  TerminalExpression.cpp  expression.cpp
lib/expression/src/Operator/: AdditionExpression.cpp  DivisionExpression.cpp  ModuloExpression.cpp  MultiplicationExpression.cpp  SubtractionExpression.cpp
lib/expression/src/Operator/Arithmetic/: AdditionExpression.cpp  DivisionExpression.cpp  ModuloExpression.cpp  MultiplicationExpression.cpp  SubtractionExpression.cpp
lib/expression/src/Operator/Comparison/: EqualToExpression.cpp  GreaterThanExpression.cpp  GreaterThanOrEqualToExpression.cpp  LessThanExpression.cpp  LessThanOrEqualToExpression.cpp  NotEqualToExpression.cpp  ThreeWayExpression.cpp
lib/expression/src/Operator/Logical/: AndExpression.cpp  NegationExpression.cpp  OrExpression.cpp
lib/expression/src/Terminal/: Identifier.cpp  Number.cpp
lib/statement/: CMakeLists.txt
lib/statement/include/: AssignmentStatement.h  PrintStatement.h  VariableStatement.h  statement.h
lib/statement/src/: AssignmentStatement.cpp  PrintStatement.cpp  VariableStatement.cpp  statement.cpp
src/: CMakeLists.txt  main.cpp
(+310 files in other folders)
